# tcp-client

./: README.md  main.py  pyproject.toml
src/tcp/: __init__.py  client.py
tcp/: client.py
